--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -18,7 +18,7 @@
         <section class="clearfix">
             <div class="media-container right inset" style="width: 180px">
                 <a href="https://www.khanacademy.org/profile/kasrak">
-                    <img src="img/badge.png" class="right" width="100" height="117">
+                    <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/badge.png" class="right" width="100" height="117">
                 </a>
             </div>
 
@@ -37,7 +37,7 @@
             </p>
 
             <div class="media-container center">
-                <img src="img/khan-website.png" width="720" height="437">
+                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/khan-website.png" width="720" height="437">
             </div>
 
             <p>
@@ -65,13 +65,13 @@
                 </div>
                 <div class="video-player">
                     <div class="fake-ipad">
-                        <video poster="img/related-videos-0.png"
+                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.png"
                                width="384" height="512"
                                loop>
-                               <source src="img/related-videos-0.mp4"
-                                       type="video/mp4">
-                               <source src="img/related-videos-0.webm"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.webm"
                                        type="video/webm">
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.mp4"
+                                       type="video/mp4">
                         </video>
                     </div>
                     <div class="play-button"></div>
@@ -94,12 +94,12 @@
                 </div>
                 <div class="video-player">
                     <div class="fake-ipad">
-                        <video poster="img/related-videos-free-docking.png"
+                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.png"
                                width="384" height="512"
                                loop>
-                               <source src="img/related-videos-free-docking.webm"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.webm"
                                        type="video/webm">
-                               <source src="img/related-videos-free-docking.mp4"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.mp4"
                                        type="video/mp4">
                         </video>
                     </div>
@@ -113,12 +113,12 @@
             <div class="video-player">
                 <div class="media-container left half">
                     <div class="fake-ipad">
-                        <video poster="img/related-videos-set-anchor-no.png"
+                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.png"
                                width="306" height="408"
                                loop>
-                               <source src="img/related-videos-set-anchor-no.webm"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.webm"
                                        type="video/webm">
-                               <source src="img/related-videos-set-anchor-no.mp4"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.mp4"
                                        type="video/mp4">
                         </video>
                     </div>
@@ -129,12 +129,12 @@
                 </div>
                 <div class="media-container right half">
                     <div class="fake-ipad">
-                        <video poster="img/related-videos-set-anchor-yes.png"
+                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.png"
                                width="306" height="408"
                                loop>
-                               <source src="img/related-videos-set-anchor-yes.webm"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.webm"
                                        type="video/webm">
-                               <source src="img/related-videos-set-anchor-yes.mp4"
+                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.mp4"
                                        type="video/mp4">
                         </video>
                     </div>
@@ -161,7 +161,7 @@
             <p>My next project was to make a native version of the exercise scratchpad. A lot of students use the scratchpad on the website to do rough work, even though writing with
             a mouse can be painful, so we knew it was a valuable feature that could provide a far better experience on a touch device. This ended up being my biggest project.</p>
 
-            <img src="img/scratchpad-view-sandwich.png" width="182" height="160" class="scratchpad-view-sandwich">
+            <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-view-sandwich.png" width="182" height="160" class="scratchpad-view-sandwich">
 
             <p>It was decided early on during the development of the app that exercise content would be rendered in a web view&mdash;it was the only feasible way to bring hundreds of exercises with the resources we had. This meant the scratchpad canvas
             (a native view) would cover the webview rendering the exercise.</p>
@@ -171,12 +171,12 @@
             <div class="media-container center">
                 <div class="fake-ipad">
                     <div class="video-player">
-                        <video poster="img/scratchpad-full.png"
+                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.png"
                                width="512" height="254"
                                loop>
-                           <source src="img/scratchpad-full.webm"
+                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.webm"
                                    type="video/webm">
-                           <source src="img/scratchpad-full.mp4"
+                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.mp4"
                                    type="video/mp4">
                         </video>
                         <div class="play-button"></div>
@@ -227,9 +227,9 @@
             <div class="media-container center">
                 <video autoplay loop
                        width="444" height="82">
-                       <source src="img/exercise-progression.webm"
+                       <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.webm"
                                type="video/webm">
-                       <source src="img/exercise-progression.mp4"
+                       <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.mp4"
                                type="video/mp4">
                 </video>
                 <div class="media-caption" style="width: 400px">
@@ -300,15 +300,15 @@
             </p>
 
             <div class="media-container center" style="position: relative">
-                <img src="img/question-mark.png"
+                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/question-mark.png"
                      style="position: absolute; bottom: 70px; right: 50px;"
                      class="clickable overlay-toggle"
                      onclick="toggleOverlayWithId('customSchemeOverlay')">
-                <img src="img/custom-scheme.png" width="720" height="443">
+                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/custom-scheme.png" width="720" height="443">
             </div>
 
             <div id="customSchemeOverlay" class="overlay" style="margin-top: -55px">
-                <img src="img/overlay-arrow.png" class="overlay-arrow" style="right: 56px">
+                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/overlay-arrow.png" class="overlay-arrow" style="right: 56px">
                 <p>
                 It uses a custom scheme that sets an environment variable with
                 the name of the exercise to load on launch.
@@ -334,7 +334,7 @@ if (initialExerciseName) {
             <h2>Thank you!</h2>
 
             <div class="media-container center">
-                <img src="img/knowledge.png" width="718" height="112"
+                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/knowledge.png" width="718" height="112"
                      class="shadow-frame">
                 <div class="media-caption">
                     Learning in progress.
@@ -381,5 +381,14 @@ if (initialExerciseName) {
     <p class="pubinfo">
         Published January 6, 2014.
     </p>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-92051-24', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 </html>
