--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My summer at Khan Academy</title>
-    <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
     <script src="code.js" async></script>
 </head>
@@ -111,42 +111,25 @@
             <p>I spent a lot of time playing with these prototypes. I noticed that if your finger wasn't centered in the video view when docking the video, the finger would become detached from the video as it shrunk, ruining the illusion of direct manipulation. I fixed this by setting the view's anchor point to the touch position, which makes the view shrink around the user's finger&mdash;a simple change that prevents limb-view detachment. See for yourself:</p>
 
             <div class="video-player">
-                <div class="media-container left half">
-                    <div class="fake-ipad">
-                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.png"
-                               width="306" height="408"
-                               loop>
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.webm"
-                                       type="video/webm">
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-no.mp4"
-                                       type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="media-caption">
+                    <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.png"
+                           width="720" height="458"
+                           loop>
+                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.webm"
+                                   type="video/webm">
+                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.mp4"
+                                   type="video/mp4">
+                    </video>
+                    <div class="media-caption left half">
                         Before: Anchor point is always in the center of the video view.
                         The touch leaves the view as it shrinks.
                     </div>
-                </div>
-                <div class="media-container right half">
-                    <div class="fake-ipad">
-                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.png"
-                               width="306" height="408"
-                               loop>
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.webm"
-                                       type="video/webm">
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-set-anchor-yes.mp4"
-                                       type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="media-caption">
+                    <div class="media-caption right half">
                         After: Anchor point is set to the touch position.
                         The view resizes around the touch, so the
                         touch never leaves the view.
                     </div>
-                </div>
-
-                <div class="play-button" style="background-position-y: 200px"></div>
-                <div class="pause-button" style="background-position-y: 200px"></div>
+                    <div class="play-button" style="background-position-y: 200px"></div>
+                    <div class="pause-button" style="background-position-y: 200px"></div>
             </div>
 
             <p>I tried implementing all of the animations between the different states with <a href="https://developer.apple.com/library/ios/documentation/UIKit/Reference/UIDynamicAnimator_Class/index.html#//apple_ref/occ/cl/UIDynamicAnimator">UIDynamics</a>, but ended up switching to <a href="https://github.com/facebook/pop">POP</a> because UIDynamics doesn't provide an easy way to tell when animations have quiesced. As a bonus, POP made it pretty easy to have the animations be <a href="http://youtu.be/OiY1cheLpmI?t=43m35s">interruptible</a>.</p>
@@ -225,8 +208,9 @@
             Here are some of them.</p>
 
             <div class="media-container center">
-                <video autoplay loop
-                       width="444" height="82">
+                <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.png"
+                       autoplay loop
+                       width="444" height="82" class="tap-to-play">
                        <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.webm"
                                type="video/webm">
                        <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.mp4"
@@ -381,6 +365,15 @@ if (initialExerciseName) {
     <p class="pubinfo">
         Published January 6, 2014.
     </p>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.3/fastclick.min.js"></script>
+    <script>
+    if ('addEventListener' in document) {
+        document.addEventListener('DOMContentLoaded', function() {
+                FastClick.attach(document.body);
+                }, false);
+    }
+    </script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
