--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -169,9 +169,8 @@
             </div>
 
             <p>
-            So the main problem boils down to hit testing: when the scratchpad
-            is active and a touch starts, should we start drawing or let the webview
-            handle the touch?
+            So the main problem is hit testing: when the scratchpad a touch starts,
+            should we start drawing on the scratchpad or let the webview handle the touch?
             </p>
 
             <p>
@@ -196,15 +195,15 @@
             </p>
 
             <p>
-            Shoutout to Andy for improving inking, Matt for helping with
-            two-finger scrolling.
+            Shoutout to <a href="https://twitter.com/andy_matuschak">Andy</a> for improving inking,
+            <a href="https://twitter.com/drance">Matt</a> for helping with two-finger scrolling.
             </p>
         </section>
 
         <section>
             <h2>Other things&hellip;</h2>
 
-            <p>I got to work on a bunch of other things over the four months.
+            <p>I got to work on a bunch of other things as well.
             Here are some of them.</p>
 
             <div class="media-container center">
@@ -363,7 +362,7 @@ if (initialExerciseName) {
     </div>
 
     <p class="pubinfo">
-        Published January 6, 2014.
+        Published January 18, 2014.
     </p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.3/fastclick.min.js"></script>
