Add simple posts index page

--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My summer at Khan Academy</title>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="code.js" async></script>
 </head>
 <body>
@@ -385,7 +385,7 @@ if (initialExerciseName) {
 
     <p class="pubinfo">
         Thanks to <a href="http://leila.cc/">Leila</a> and <a href="http://nickdirienzo.com/">Nick</a> for reading drafts of this post.<br>
-        Published January 18, 2014.
+        Published January 20, 2014.
     </p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.3/fastclick.min.js"></script>
