--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -40,8 +40,8 @@
 
             <p>
             For the past few months, the mobile team has been working hard to bring
-            these exercises to the iPad app. Here are some of the parts I helped
-            build...
+            these exercises to the <a href="https://itunes.apple.com/en/app/khan-academy/id469863705?mt=8">iPad app</a>.
+            Here are some of the parts I helped build...
             </p>
         </section>
 
@@ -233,7 +233,9 @@
                     I had a lot fun working on animations in the app. This is a bouncy animation
                     I made to show the student's progress in an exercise.
                     <strong>The shipped version has confetti, so go
-                    download the app to experience the full glory.</strong>
+                        <a href="https://itunes.apple.com/en/app/khan-academy/id469863705?mt=8">download the app</a>
+                        to experience the full glory.
+                    </strong>
                     Thanks to fellow intern
                     <a href="http://www.elizabethylin.com/">Elizabeth Lin</a>
                     for helping design this
